src/app.css
@font-face {
  font-family: SourceSansPro;
  src: url(./common/uswds/fonts/source-sans-pro/sourcesanspro-regular-webfont.woff2);
  font-display: swap;
}
@font-face {
  font-family: SourceSansProBold;
  src: url(./common/uswds/fonts/source-sans-pro/sourcesanspro-bold-webfont.woff2);
  font-display: swap;
}
@font-face {
  font-family: SourceSansProItalic;
  src: url(./common/uswds/fonts/source-sans-pro/sourcesanspro-italic-webfont.woff2);
  font-display: swap;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  font-family: SourceSansPro;
  font-size: 10px;
  box-sizing: border-box;
  min-height: 100%;
  position: relative;
  overflow-y: scroll;
}

body {
  margin: 0 0 375px;
  padding: 0;
  font-family: SourceSansPro;
  font-size: 1.7rem;
}

main,
#main-content {
  display: block;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

th,
td {
  background-color: #ffffff;
  border: 1px solid #5b616b;
  padding: 1rem 1.5rem;
}

th {
  font-family: SourceSansProBold;
  text-align: left;
}

thead th,
thead td {
  background-color: #f1f1f1;
}

caption {
  font-size: 1.5rem;
  font-weight: 700;
  font-family: SourceSansPro;
  margin-bottom: 1.2rem;
  text-align: left;
}

input {
  font-family: SourceSansPro;
}

.skipnav {
  background: transparent;
  color: #212121;
  left: 0;
  padding: 1rem 1.5rem;
  position: absolute;
  top: -4.2rem;
  transition: all 0.2s ease-in-out;
  z-index: 100;
}

.skipnav:focus {
  top: 0;
  background: #fff;
}

.text-small {
  font-size: 1.3rem;
}

.App,
.full-width {
  max-width: 1040px;
  margin: 0 auto;
  padding: 0 3rem;
}

.half-width {
  float: left;
  display: block;
  width: 50%;
}

.App h1 {
  margin-bottom: 0;
  color: var(--hmda-blue);
  font-size: 4rem;
  margin-top: 1.5em;
}

.grid {
  align-items: stretch;
  display: flex;
  flex-wrap: wrap;
  padding: 0;
}

a {
  color: #0071bc;
  text-decoration: underline;
}

a:visited {
  color: #4c2c92;
}

a:hover,
a:active {
  color: #205493;
}

p,
li {
  line-height: 1.5;
}

li {
  margin-bottom: 0.5em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: SourceSansProBold;
  clear: both;
  margin-top: 1.5em;
  margin-bottom: 0.5em;
  line-height: 1.3;
}

h1 + ul,
h1 + ol,
h2 + ul,
h2 + ol,
h3 + ul,
h3 + ol,
h4 + ul,
h4 + ol,
h5 + ul,
h5 + ol,
h6 + ul,
h6 + ol,
p + ul,
p + ol {
  margin-top: 0;
}

ol,
ul {
  padding-left: 1.94em;
}

hr {
  border-bottom: none;
  border-top: 1px solid #5b616b;
}

.button-link {
  background: none;
  font-family: SourceSansPro;
  border: none;
  color: #0071bc;
  text-decoration: underline;
  font-size: 1.7rem;
  padding: 0;
  cursor: pointer;
  margin: 0;
  -moz-osx-font-smoothing: unset;
  -webkit-font-smoothing: unset;
}

.CSVDownload:hover,
.button-link:hover {
  color: #4c2c92;
  background: inherit;
}

.BackLink {
  font-family: SourceSansProBold;
  font-size: 1.3rem;
  text-transform: uppercase;
  display: block;
  margin: 24px 0 -32px;
}

.Beta {
  margin: 0 auto 32px;
  max-width: 1040px;
}

.home p {
  color: #5b616b;
  margin-top: 0;
}

.home .font-lead {
  font-size: 2rem;
}

.home h1 {
  font-family: SourceSansProBold;
  margin-bottom: 0;
}

.home .card-container {
  align-items: stretch;
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  max-width: 1040px;
}
.home .card {
  flex: 1 1 422px;
  margin: 0 8em 0 0;
}

.DataBrowser .home .card-container {
  align-items: flex-start;
  justify-content: flex-start;
  display: flex;
  flex-wrap: wrap;
  margin: 0;
}

.home .card > ul {
  margin-bottom: 4em;
}

.home header:not(:first-child) {
  margin-top: 4em;
}

.home h3,
.home h4 {
  margin: 0;
}

.home ul ul {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}
.home li {
  margin-bottom: 0;
}

.home h1 {
  font-size: 4rem;
  margin-top: 1.5em;
}

.home > h3 {
  font-size: 2.5rem;
  font-family: SourceSansPro;
}

.home hr {
  border-color: #aeb0b5;
  border-top: none;
  margin: 0 auto 3rem;
  max-width: 1040px;
}

.home .lead {
  color: #5b616b;
  font-size: 2rem;
  line-height: 1.7;
}

.home h2 a {
  color: #000;
  text-decoration: none;
}

.home h2 a:hover {
  color: #0071bc;
  text-decoration: underline;
}

.s3-modified {
  margin-left: 2px;
  color: grey;
}

@media screen and (max-width: 1054px) {
  .home .card:nth-of-type(2) {
    margin-top: 2em;
  }
}

@media screen and (max-width: 640px) {
  .home .card {
    margin-right: 0;
  }
}

button,
.button,
button:visited,
.button:visited,
input[type='submit'],
input[type='submit']:visited {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background-color: #0071bc;
  border: 0;
  border-radius: 5px;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: SourceSansProBold;
  font-size: 1.7rem;
  font-weight: 700;
  line-height: 1;
  margin: 3rem 0 0;
  padding: 1rem 2rem;
}
@media screen and (min-width: 481px) {
  button,
  .button,
  button:visited,
  .button:visited,
  input[type='submit'],
  input[type='submit']:visited {
    width: auto;
  }
}
button:hover,
.button:hover,
button:visited:hover,
.button:visited:hover,
input[type='submit']:hover,
input[type='submit']:visited:hover {
  background-color: #205493;
  color: #ffffff;
}

button:active,
.button:active,
button:visited:active,
.button:visited:active,
input[type='submit']:active,
input[type='submit']:visited:active {
  background-color: #112e51;
  color: #ffffff;
}

button:disabled,
.button:disabled,
button:visited:disabled,
.button:visited:disabled,
input[type='submit']:disabled,
input[type='submit']:visited:disabled {
  background-color: #d6d7d9;
  color: #ffffff;
  pointer-events: none;
}
button:disabled:hover,
.button:disabled:hover,
button:disabled:active,
.button:disabled:active,
button:disabled:focus,
.button:disabled:focus,
button:visited:disabled:hover,
.button:visited:disabled:hover,
button:visited:disabled:focus,
.button:visited:disabled:focus,
button:visited:disabled:active,
.button:visited:disabled:active,
input[type='submit']:disabled:hover,
input[type='submit']:disabled:active,
input[type='submit']:disabled:focus,
input[type='submit']:visited:disabled:hover,
input[type='submit']:visited:disabled:focus,
input[type='submit']:visited:disabled:active {
  background-color: #d6d7d9;
  color: #ffffff;
}

.nowrap {
  white-space: nowrap;
}

.bold {
  font-weight: bold;
}

.zero-margin-top {
  margin-top: 0px;
}

